Adding css file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        Hey.
+        <link rel="stylesheet" type="text/css" href="style\style.css">
     </head>
     <Body>
         <h1>Build in progress.</h1>
