--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
         <link rel="stylesheet" type="text/css" href="style\style.css">
     </head>
     <Body>
-        <h1>Build in progress.</h1>
+        <div id="top">
+            <div id="para"><h1>Ashwani Kumar</h1>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br>
+            Lorem Ipsum has been the industry's standard dummy text ever since the<br>
+            1500s, when an unknown printer took a gallery of type and scrambled it to<br>
+            make a type specimen book.</div>
+        </div>
     </Body>
 </html>
