Added text in Bio.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <Body>
         <div id="top">
             <div id="para"><h1>Ashwani Kumar</h1>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br>
-            Lorem Ipsum has been the industry's standard dummy text ever since the<br>
-            1500s, when an unknown printer took a gallery of type and scrambled it to<br>
-            make a type specimen book.</div>
+            Hey!
+            This is Ashwani. I am a computer science graduate and tech enthusiast.
+            I have been working in the IT field since 2018. I have worked on different technologies
+            such as C#, .Net, SQL, PL/SQL, SAP MM, SAP ABAP. I am always keen to learn new things.
+        </div>
         </div>
     </Body>
 </html>
